--- a/QCon Android/src/main/AndroidManifest.xml
+++ b/QCon Android/src/main/AndroidManifest.xml
@@ -11,11 +11,9 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="QCon Android"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
