PlayStore: minor tweaks

--- a/QCon Android/src/main/AndroidManifest.xml
+++ b/QCon Android/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity
             android:name=".activity.PlayStore"
-            android:label="Play Store"/>
+            android:label="Play Store Colors"/>
     </application>
 
 </manifest>
